# fontpm

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
api/: Cargo.toml
api/src/: error.rs  font.rs  host.rs  lib.rs  output.rs  source.rs  util.rs
cli/: Cargo.toml
cli/src/: build_config.rs  commands.rs  config.rs  generate.rs  host_impl.rs  main.rs  output_impl.rs  sources.rs
cli/src/commands/: config.rs  install.rs  purge.rs  refresh.rs
sources/google-fonts/: Cargo.toml
sources/google-fonts/src/: data.rs  github.rs  lib.rs
