[package]
name = "fontpm-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
log = "0.4.17"
backtrace = { version = "0.3.67", optional = true }
reqwest = { version = "0.11.13", optional = true }
toml = "0.5.10"
semver = "1.0.16"

[features]
default = []
reqwest-util = ["dep:reqwest"]
debug = ["dep:backtrace"]
