[package]
name = "fontpm-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.60"
log = "0.4.17"
backtrace = { version = "0.3.67", optional = true }
reqwest = { version = "0.11.13", optional = true }
toml = "0.5.10"
semver = "1.0.16"
thiserror = "1.0.40"

[features]
default = []
reqwest-util = ["dep:reqwest"]
debug = ["dep:backtrace"]
