[package]
name = "fontpm"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.2.2" }
lazy_static = "1.4.0"
semver = "1.0.16"
fontpm-api = { path = "../api" }
fontpm-source-google-fonts = { path = "../sources/google-fonts", optional = true }
log = "0.4.17"
termcolor = "1.1.3"
env_logger = "0.10.0"
toml = "0.5.10"
dirs = "4.0.0"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
multimap = "0.8.3"
paris = "1.5.13"
async-trait = "0.1.68"
clap_derive = "4.2.0"
thiserror = "1.0.40"
path-clean = "1.0.1"

[features]
default = ["google-fonts"]
google-fonts = ["dep:fontpm-source-google-fonts"]
