[package]
name = "fontpm"
description = """
A package-manager like tool to install fonts.
"""
repository = "https://github.com/tecc/fontpm"
keywords = ["fontpm", "fonts"]
categories = ["command-line-utilities", "multimedia", "web-programming"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
clap = { version = "4.2.2" }
lazy_static = "1.4.0"
semver = "1.0.16"
fontpm-api = { path = "../api", version = "0.1" }
fontpm-source-google-fonts = { path = "../sources/google-fonts", version = "0.1", optional = true }
# log = "0.4.17"
termcolor = "1.1.3"
env_logger = "0.10.0"
toml = "0.7.3"
dirs = "5.0.0"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
multimap = "0.9.0"
paris = "1.5.13"
async-trait = "0.1.68"
clap_derive = "4.2.0"
thiserror = "1.0.40"
path-clean = "1.0.1"

[features]
default = ["google-fonts"]
google-fonts = ["dep:fontpm-source-google-fonts"]
