[package]
name = "fontpm-source-google-fonts"
description = """
Google Fonts font source [`fontpm`](https://github.com/tecc/fontpm).
"""
repository = "https://github.com/tecc/fontpm"
keywords = ["fontpm", "fonts"]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = false

[dependencies]
default-env = "0.1.1"
fontpm-api = { path = "../../api", version = "0.2", features = ["reqwest-util"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json", "gzip", "brotli"] } # We like our compression for this one
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
